workshop/3_frontend/2_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: aimaraa/workshop-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
