workshop/3_frontend/1_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: 'TCP'
      port: 80
      targetPort: 80
  clusterIP: None
